--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,35 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.textColor { 
+  color: orange;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.button{
+  background-color: rgb(255, 80, 0);
+  border: none;
+  border-radius: 20px;
+  outline: none;
   color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 35px; 
 }
 
-.App-link {
-  color: #61dafb;
+.inputText {
+  background-color: rgb(206, 206, 206);
+  border: black;
+  border-radius: 20px;
+  outline: none;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 350px;
+  height: 35px; 
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgb(255, 225, 168);
 }
